<resources>
    <string name="settings">Settings</string>
    <string name="settings_category_preferences">Preferences</string>
    <string name="settings_screen_interface">Interface</string>
    <string name="settings_data">settings_data</string>
    <string name="settings_screen_data">Data</string>
    <string name="settings_interface">settings_interface</string>
    <string name="settings_behaviors">settings_behaviors</string>
    <string name="settings_screen_behaviors">Behaviors</string>
    <string name="help">Help</string>
    <string name="settings_tour_show">settings_tour_show_again</string>
    <string name="settings_tour_show_again_summary">Show me the application tour again</string>
    <string name="settings_tour_show_again">App tour</string>
    <string name="settings_category_about">About</string>
    <string name="settings_changel">settings_changelog</string>
    <string name="settings_changelog">Changelog</string>
    <string name="settings_fab_expansion_behavior_key">settings_fab_expansion_behavior</string>
    <string name="settings_fab_expansion_behavior_summary_off">Short touch toggles options</string>
    <string name="settings_fab_expansion_behavior_summary_on">Short touch performs action</string>
    <string name="settings_fab_expansion_behavior">Floating action button</string>
    <string name="settings_prettified_dates_key">settings_prettified_dates</string>
    <string name="settings_prettified_dates_summary_off">Dates are shown in a more detailed format</string>
    <string name="settings_prettified_dates_summary_on">Dates are shown in a simplier format</string>
    <string name="settings_prettified_dates">Prettified dates</string>
    <string name="settings_import_data_key">settings_import_data</string>
    <string name="settings_import">Restore or delete backups</string>
    <string name="settings_enable_swipe_summary">Swipe on notes to perform actions</string>
    <string name="settings_enable_swipe">Swipe notes</string>
    <string name="settings_enable_swipe_key">settings_enable_swipe</string>
    <string name="settings_swipe_to_trash_key">settings_swipe_to_trash</string>
    <string name="swipe_removal">Swipe removal</string>
    <string name="settings_swipe_to_trash">Swipe to trash</string>
    <string name="version">\n\n\nNotebook :\nversion 1.0</string>
    <string name="show_notifications">Show notifications</string>
    <string name="show_notifications_key">show_notifications_key</string>
    <string name="notifications_are_disabled">notifications are disabled</string>
    <string name="notifications_enabled">notifications enabled</string>

</resources>