<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:key="@string/settings">

    <PreferenceCategory
        android:title="@string/settings_category_preferences"
        app:iconSpaceReserved="false">

        <Preference
            android:layout_width="wrap_content"
            android:key="@string/settings_data"
            android:title="@string/settings_screen_data"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="@string/settings_interface"
            android:title="@string/settings_screen_interface"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="@string/settings_behaviors"
            android:title="@string/settings_screen_behaviors"
            app:iconSpaceReserved="false" />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/help"
        app:iconSpaceReserved="false">

        <Preference
            android:key="@string/settings_tour_show"
            android:summary="@string/settings_tour_show_again_summary"
            android:title="@string/settings_tour_show_again"
            app:iconSpaceReserved="false"/>


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_about"
        app:iconSpaceReserved="false">

        <Preference
            android:key="@string/settings_changel"
            android:title="@string/settings_changelog"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
